# atomic_habits

./: .env.sample  Dockerfile  README.md  coverage.txt  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/: habits.json  users.json
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_time.py  0004_alter_habit_time.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
