[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = ["Tatyana Kharlamova <kharlamova2785@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.8"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.8.0"
django-stubs = "^5.0.4"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
