[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = ["Tatyana Kharlamova <kharlamova2785@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.8"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.8.0"
django-stubs = "^5.0.4"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.6.1"
drf-yasg = "^1.21.7"
setuptools = "^72.1.0"
django-cors-headers = "^4.4.0"
celery = "^5.4.0"
eventlet = "^0.36.1"
requests = "^2.32.3"
redis = "^5.0.8"
django-celery-beat = "^2.6.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
